tests/NormalTests/paczka1/small_fuzzy/31298758.err
Error in line 4: iVy A221 96,1
Error in line 8: iVy A219 25,9
Error in line 9: iVy S730 61,5
Error in line 11: iVy A221 5,3
Error in line 13: j8jEH A411 31,0
